--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/carmilso/Robot4x4Raspberry/issues"
   },
-  "homepage": "https://github.com/carmilso/Robot4x4Raspberry",
+  "homepage": "https://www.github.com/carmilso/Robot4x4Raspberry",
   "dependencies": {
     "connect-flash": "~0.1.1",
     "express": "~4.13.1",
@@ -25,6 +25,7 @@
     "body-parser": "~1.13.2",
     "passport-local": "~1.0.0",
     "mysql": "~2.8.0",
-    "twilio": "~2.3.0"
+    "twilio": "~2.3.0",
+    "socket.io": "~1.3.6"
   }
 }
